--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-calendars": "^1.1307.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "^3.15.4",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.8.0",
+    "react-native-svg-transformer": "^1.5.0",
     "twrnc": "^4.5.1"
   },
   "devDependencies": {
