--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-pie-chart": "^3.0.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
