--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.75.3",
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-pie-chart": "^3.0.2",
