--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -12,15 +12,19 @@ jobs:
       contents: write
 
     steps:
-      - name: checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: setup phyton
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
-      - name: Run Scrip
-        run: phyton ./workflows/stats.py
 
-      - name: comit and push changes
-        uses: stefanzweifel/git-auto-comit-action@v5
+      - name: Run Script
+        run: python .github/workflows/stats.py  
+
+      - name: Commit and Push Changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Automated commit from GitHub Actions"
+          branch: main
