--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -21,7 +21,8 @@ jobs:
           python-version: '3.11'
 
       - name: Run Script
-        run: python .github/workflows/stats.yml  
+        run: python stats.py
+
 
       - name: Commit and Push Changes
         uses: stefanzweifel/git-auto-commit-action@v5
