--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install Dependencies
+        run: pip install requests  # Instalar el módulo requests
+
       - name: Run Script
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
