--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-native-config": "^1.5.3",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-image-picker": "^7.1.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pie-chart": "^3.0.2",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.8.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-native-vector-icons": "^10.2.0",
+    "tailwindcss": "^3.4.15",
     "twrnc": "^4.5.1"
   },
   "devDependencies": {
